perf(bench): cluster vs local A/B validates C1 dataset cache as critical
Adds LocalClusterAB.java which runs core 6 queries (q1-q4 + q11 + q14) 12-20
iterations in one SparkSession, alternating noop+count+collect actions to avoid
the JMH noop-loop accumulation artifact. Master and dataset_cache toggles flow
through -Dspark.master.override and -Dlance.spark.dataset_cache_enabled.

MinioTpcdsBenchmark.TpcdsSession learns to read spark.master.override and
forward Arrow open-modules + cache toggle to executor JVMs via
spark.executor.extraJavaOptions when running under local-cluster.

Also lands two debug-only probes (FilterPathProbe.java, Q10FilterProbe.java)
used to discover that the JMH q8/q10/q18 outliers were a NoopBatchWrite
repeated-loop artifact, not real lance overhead.

Headline finding (full report at docs/profiles/2026-05-25-cluster-vs-local-c1-validation.md):

| q  | clu lance C1 ON | clu parquet | clu L/P | clu lance C1 OFF | OFF/parquet |
|----|---:|---:|---:|---:|---:|
| q1 | 1426 | 1429 | 1.00x | 17730 | 12.4x |
| q2 | 2916 | 2789 | 1.05x | 19561 |  7.0x |
| q3 | 4935 | 1836 | 2.69x | 18188 |  9.9x |
| q4 | 9699 | 6083 | 1.59x | 23390 |  3.8x |
| q11|  534 |  159 | 3.36x |   703 |  4.4x |
| q14|  569 |  126 | 4.52x |  2625 | 20.8x |

Three takeaways:
 - C1 cache is critical (not just helpful) for cluster: without it lance is
   7-12x slower than parquet on 288M fact tables; with C1 the gap closes to
   1.00-1.59x.
 - cluster mode actually narrows the lance/parquet gap on big fact tables
   (q1/q2 reach parity) because IPC cost is paid by both engines.
 - cluster surfaces two new gaps: q3 filter+count regresses from 0.79x in
   local to 2.69x in cluster (lance is more sensitive to cluster overhead
   than parquet on filter pushdown paths); small-table queries (q11/q14)
   stay 3-5x slower because Spark task overhead dominates and lance lacks
   page-level statistics that parquet has.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>